# easyjni

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  JavaArray_8h.html  JavaClass_8h.html  JavaElement_8h.html  JavaField_8h.html  JavaMethod_8h.html  JavaObject_8h.html  JavaSignature_8h.html  JavaVirtualMachineBuilder_8h.html  JavaVirtualMachineRegistry_8h.html  JavaVirtualMachine_8h.html  JniException_8h.html  README.md  README_8md.html  about.html  about_8dox.html  annotated.html  classeasyjni_1_1JavaArray.html  classeasyjni_1_1JavaClass.html  classeasyjni_1_1JavaElement.html  classeasyjni_1_1JavaField.html  classeasyjni_1_1JavaMethod.html  classeasyjni_1_1JavaObject.html  classeasyjni_1_1JavaVirtualMachine.html  classeasyjni_1_1JavaVirtualMachineBuilder.html  classeasyjni_1_1JavaVirtualMachineRegistry.html  classeasyjni_1_1JniException.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_a8fc9c9291fb33acc281f2d41c5c055d.html  dir_ef3b2545113449f8f25e623a543d64e3.html  files.html  index.html  main.cpp  modules.html  namespaceeasyjni.html  namespaces.html  (+4 more)
.github/workflows/: ci.yml
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
easyjni/: JavaArray.cpp  JavaArray.h  JavaClass.cpp  JavaClass.h  JavaElement.cpp  JavaElement.h  JavaField.cpp  JavaField.h  JavaMethod.cpp  JavaMethod.h  JavaObject.cpp  JavaObject.h  JavaSignature.h  JavaVirtualMachine.cpp  JavaVirtualMachine.h  JavaVirtualMachineBuilder.cpp  JavaVirtualMachineBuilder.h  JavaVirtualMachineRegistry.cpp  JavaVirtualMachineRegistry.h  JniException.cpp  JniException.h
example/: main.cpp
include/crillab-easyjni/: JavaArray.h  JavaClass.h  JavaElement.h  JavaField.h  JavaMethod.h  JavaObject.h  JavaSignature.h  JavaVirtualMachineRegistry.h
source/: JavaArray.cpp  JavaClass.cpp  JavaElement.cpp  JavaField.cpp  JavaMethod.cpp  JavaObject.cpp  JavaVirtualMachine.cpp  JavaVirtualMachineBuilder.cpp  JavaVirtualMachineRegistry.cpp  JniException.cpp
